Fixed the spacing in stories section

--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,8 @@ body {
     transition: all 0.5s; }
   .story__text {
     transform: skewX(12deg);
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(12deg);
+    margin-left: 1.5rem; }
     @media only screen and (max-width: 37.5em) {
       .story__text {
         transform: translateX(-1.5rem) skewX(0deg); } }
